# sign_language_robot

./: .gitignore  .gitmodules  README.md
arm_hand_capture/: CMakeLists.txt  README.md  package.xml
arm_hand_capture/launch/: load_camera.launch  load_camera_uvc.launch  start_all.launch  start_all_with_image.launch  start_camera.launch  start_yumi_teleop.launch  test_message_filters.launch  validate_local_frame_transforms.launch  visualize_recorded_movements.launch  visualize_recorded_movements_README
arm_hand_capture/msg/: DualArmDualHandState.msg  DualArmDualHandStateWithImage.msg  GloveState.msg
arm_hand_capture/rviz/: mocap_tf.rviz  mocap_tf_original_adjusted.rviz
arm_hand_capture/script/: bath_process.py  extract_calibration_data.py  extract_from_rosbag.py  grasp_hand.bag  read_vids.py  swing_arm.bag
arm_hand_capture/src/: load_adjusted_visualization_markers.cpp  load_original_visualization_markers.cpp  load_visualization_markers.cpp  load_visualization_markers_after_transform.cpp  load_visualization_markers_before_transform.cpp  load_visualization_markers_without_image.cpp  sync_message_topic.cpp  sync_state_with_image.cpp  sync_state_without_image.cpp  synced_message_to_ur5.cpp  synced_message_to_yumi.cpp  test_message_filter.cpp  test_message_filter_class.cpp  topic_to_sync_1.cpp  topic_to_sync_2.cpp  topic_to_sync_3.cpp  unpack_adjusted_movement_message.cpp  unpack_movement_after_transform.cpp  unpack_movement_before_transform.cpp  unpack_original_movement_message.cpp  unpack_synced_message.cpp  unpack_synced_message_with_image.cpp  unpack_synced_message_without_image.cpp  validate_local_frame_transforms.cpp  visualize_recorded_movements.cpp
arm_hand_capture/tmp_bag/: first.bag  second.bag
arm_hand_retargeting/: CMakeLists.txt  README  package.xml
arm_hand_retargeting/include/: config.h  yumi_arm_retarget_g2o_similarity.h
arm_hand_retargeting/include/edges/: CollisionConstraint.h  DMPConstraints.h  MyUnaryConstraints.h  SmoothnessConstraint.h  TrackingConstraint.h
arm_hand_retargeting/include/nullspace_liweijie/: NullSpaceControl.h  config_nullspace.h  inverseKinematics.h  (+3 more)
arm_hand_retargeting/launch/: display_human_hand_model.launch  upload_both_hands.launch
arm_hand_retargeting/rviz/: urdf.rviz
arm_hand_retargeting/script/: execute_script_lwj.py  execute_scripy_lwj.ipynb
arm_hand_retargeting/src/: KDL_FK_Solver.cpp  KDL_FK_Solver.h  arm_retarget_nlopt.cpp  collision_checking.cpp  collision_checking.h  collision_checking_yumi.cpp  collision_checking_yumi.h  distance_computation.cpp  distance_computation.h  generate_trajectory_from_viepoints.cpp  generate_trajectory_from_viepoints.h  generate_trajectory_from_viewpoints.cpp  generate_trajectory_using_DMP.cpp  generate_trajectory_using_DMP.h  similarity_network_pytorch.cpp  similarity_network_pytorch.h  tmp_torch.cpp  tmp_torch.h  ur5_arm_retarget_nlopt.cpp  yumi_arm_retarget_g2o.cpp  yumi_arm_retarget_g2o_similarity.cpp  yumi_arm_retarget_hujin_nlopt.cpp  yumi_arm_retarget_nlopt.cpp
arm_hand_retargeting/urdf/: human_hand_model.urdf  human_hand_model.urdf.xacro  upload_both_hands.urdf  upload_both_hands.urdf.xacro  upload_one_hand.urdf.xacro
dataglove_calib_visual/sr_common/: CMakeLists.txt  package.xml
dataglove_calib_visual/sr_description/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml
dataglove_calib_visual/sr_robot_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
human_model/: CMakeLists.txt  package.xml
human_model/config/: controllers.yaml
human_model/launch/: human_model_visualization.launch
human_model/meshes/: forearm.dae  forearm_backup.dae  hand.dae  hand_backup.dae  upperarm.dae  upperarm_backup.dae
human_model/rviz/: human_model.rviz
human_model/script/: visualize_human_ik_results.py
human_model/urdf/: arm.urdf.xacro  human_model.gv  human_model.urdf  human_model.urdf.xacro
inspire_hand_driver/: CMakeLists.txt  package.xml  readme.txt
inspire_hand_driver/include/: hand_control.h
inspire_hand_driver/launch/: hand_control.launch
inspire_hand_driver/src/: hand_control.cpp  hand_control_client.cpp  hand_control_lib.cpp  handcontroltopicpublisher.cpp  handcontroltopicpublisher1.cpp  handcontroltopicsubscriber.cpp  handcontroltopicsubscriber1.cpp
inspire_hand_driver/srv/: get_angle_act.srv  get_angle_set.srv  get_current.srv  get_error.srv  get_force_act.srv  get_force_set.srv  get_pos_act.srv  get_pos_set.srv  get_status.srv  get_temp.srv  set_angle.srv  set_clear_error.srv  set_current_limit.srv  set_default_force.srv  set_default_speed.srv  set_force.srv  set_force_clb.srv  set_gesture_no.srv  set_id.srv  set_pos.srv  set_redu_ratio.srv  set_reset_para.srv  set_save_flash.srv  set_speed.srv  set_user_def_angle.srv
raw_totg/: CMakeLists.txt  package.xml
raw_totg/script/: test_TOTG_server.py
raw_totg/src/: Trajectory.cpp  Trajectory.h  add_time_optimal_parameterization_server.cpp  get_minimum_time_server.cpp
raw_totg/srv/: GetMinTime.srv  PathToTraj.srv
realtime_motion_retargeting/: CMakeLists.txt  ExecuteNode.py  package.xml
realtime_motion_retargeting/include/: NullSpaceControl.h  config.h  h5_io.h  inverseKinematics.h  kinematics.h  static_matrix_config.h  transform_matrix_helper.h  util_functions.h  yumi_trac_ik_solver.h
realtime_motion_retargeting/launch/: realtime_motion_retargeting.launch
realtime_motion_retargeting/msg/: ControlMsg.msg  MotionMsg.msg
realtime_motion_retargeting/src/: ControllerNode.cpp  DataSamplerNode.cpp
yumi_sign_language_robot_control/: CMakeLists.txt  package.xml
yumi_sign_language_robot_control/config/: controllers.yaml
yumi_sign_language_robot_control/launch/: yumi_control.launch
yumi_sign_language_robot_control/rviz/: yumi_with_inspire_hand.rviz
yumi_sign_language_robot_control/script/: yumi_controller_control.py  yumi_controller_separate_control.py  yumi_controller_separate_moveit_control.py  yumi_sign_robot_execute_arm_joint_path.py  yumi_sign_robot_execute_joint_path.py  yumi_sign_robot_execute_pure_ik_joint_path.py  yumi_sign_robot_track_dmp_trajs.py
(+694 files in other folders)
